--- a/Auswertung Philipp/alt-assistentinnen-auswertung.Rmd
+++ b/Auswertung Philipp/alt-assistentinnen-auswertung.Rmd
@@ -78,7 +78,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -101,7 +101,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -124,7 +124,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -147,7 +147,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -170,7 +170,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -193,7 +193,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -216,7 +216,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -248,7 +248,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.9, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -280,7 +280,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -303,7 +303,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.9, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -326,7 +326,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.5, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -358,7 +358,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -380,7 +380,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.75, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -404,7 +404,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.7, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -437,7 +437,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.8, fig.width=6, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -460,7 +460,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.4, fig.width=9, out.width="100%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -483,13 +483,81 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
 
 ```
 
+## Frage 5.25 - Welche Arten der Inhaltsvermittlung würden Sie in E-Learning Formaten gerne sehen?
+```{r, echo = FALSE, message=FALSE}
+FRAGE_NUMMER <- "5_25"
+LABEL_FRAGE <- "wuensche_inhaltsvermittlung"
+
+# Define dynamic plot and filename
+plot_object <- get(paste0("plot_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE))
+file_name <- paste0("graphs/", "graph_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE, ".png")
+```
+
+```{r, echo = FALSE, message=FALSE}
+kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)), align = "c", row.names = FALSE)
+```
+
+```{r, echo=FALSE, message=FALSE, fig.asp=0.9, fig.width=8, out.width="80%", fig.align="center"}
+# Save the plot dynamically
+ggsave(here(file_name), plot_object, bg = "transparent")
+
+# Include the saved plot
+knitr::include_graphics(here(file_name))
+
+```
+
+## Frage 5.26 - Welche Kriterien wären/sind Ihnen wichtig für die Auswahl von Kursen & Inhalten?
+```{r, echo = FALSE, message=FALSE}
+FRAGE_NUMMER <- "5_26"
+LABEL_FRAGE <- "kriterien_kursauswahl"
+
+# Define dynamic plot and filename
+plot_object <- get(paste0("plot_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE))
+file_name <- paste0("graphs/", "graph_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE, ".png")
+```
+
+```{r, echo = FALSE, message=FALSE}
+kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)), align = "c", row.names = FALSE)
+```
+
+```{r, echo=FALSE, message=FALSE, fig.asp=0.9, fig.width=8, out.width="80%", fig.align="center"}
+# Save the plot dynamically
+ggsave(here(file_name), plot_object, bg = "transparent")
+
+# Include the saved plot
+knitr::include_graphics(here(file_name))
+
+```
+
+## Frage 5.31 - Auf welchen Wegen haben Sie bisher ihre Veranstaltungen zu Fort- & Weiterbildung hauptsächlich gefunden? 
+```{r, echo = FALSE, message=FALSE}
+FRAGE_NUMMER <- "5_31"
+LABEL_FRAGE <- "veranstaltungen_bisher_gefunden"
+
+# Define dynamic plot and filename
+plot_object <- get(paste0("plot_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE))
+file_name <- paste0("graphs/", "graph_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE, ".png")
+```
+
+```{r, echo = FALSE, message=FALSE}
+kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)), align = "c", row.names = FALSE)
+```
+
+```{r, echo=FALSE, message=FALSE, fig.asp=0.9, fig.width=8, out.width="80%", fig.align="center"}
+# Save the plot dynamically
+ggsave(here(file_name), plot_object, bg = "transparent")
+
+# Include the saved plot
+knitr::include_graphics(here(file_name))
+
+```
 \newpage
 
 ---
@@ -515,7 +583,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -539,7 +607,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -562,7 +630,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -585,7 +653,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -608,7 +676,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -632,7 +700,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=0.25, fig.width=8, out.width="80%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -665,7 +733,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=1, fig.width=5, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -688,7 +756,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=1, fig.width=5, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -712,7 +780,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=1, fig.width=5, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
@@ -736,7 +804,7 @@ kable(get(paste0("table_", FRAGE_NUMMER, "_", LABEL_KOLLEKTIV, "_", LABEL_FRAGE)
 
 ```{r, echo=FALSE, message=FALSE, fig.asp=1, fig.width=5, out.width="65%", fig.align="center"}
 # Save the plot dynamically
-ggsave(here(file_name), plot_object)
+ggsave(here(file_name), plot_object, bg = "transparent")
 
 # Include the saved plot
 knitr::include_graphics(here(file_name))
